0.2.2
    queue: make bus and notification queue table names configurable

0.2.1
    embeddeddb: add MySQLStandaloneDB

0.2.0
    Update to killbill-oss-parent 0.3.7
    embeddeddb: add refreshTableNames API

0.1.8
    Update to killbill-oss-parent 0.3.3
    Code review integration for bus/notificationQ

0.1.7
    Update to killbill-oss-parent 0.3.2

0.1.6
    Update to killbill-oss-parent 0.3.1